--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -39,6 +39,7 @@
 	<li><a href="#Additional_Costs">Additional Costs</a></li>
 	<li><a href="#After">After</a></li>
 	<li><a href="#Agenda_Deck">Agenda Deck</a></li>
+	<li><a href="#Alert">Alert</a></li>
 	<li><a href="#Aloof">Aloof</a></li>
 	<li><a href="#Asset_Cards">Asset Cards</a></li>
 	<li><a href="#At">At</a></li>
@@ -160,6 +161,7 @@
 	<li><a href="#Revelation">Revelation</a></li>
 	<li><a href="#Sanity_and_Horror">Sanity and Horror</a></li>
 	<li><a href="#Set_Aside">Set Aside</a></li>
+	<li><a href="#Seal">Seal</a></li>
 	<li><a href="#Search">Search</a></li>
 	<li><a href="#Self_Referential_Text">Self-Referential Text</a></li>
 	<li><a href="#Signature_Cards">Signature Cards</a></li>
@@ -168,6 +170,7 @@
 	<li><a href="#Slots">Slots</a></li>
 	<li><a href="#Spawn">Spawn</a></li>
 	<li><a href="#Standalone_Mode">Standalone Mode</a></li>
+	<li><a href="#Supplies">Supplies</a></li>
 	<li><a href="#Surge">Surge</a></li>
 	<li><a href="#Taking_Damage_Horror">Taking Damage/Horror</a></li>
 	<li><a href="#Target">Target</a></li>
@@ -182,6 +185,7 @@
 	<li><a href="#Unique">Unique</a></li>
 	<li><a href="#Upkeep_Phase">Upkeep Phase</a></li>
 	<li><a href="#Uses">Uses (X "type")</a></li>
+	<li><a href="#Vengeance_Points">Vengeance Points</a></li>
 	<li><a href="#Victory_Display_Victory_Points">Victory Display, Victory Points</a></li>
 	<li><a href="#Weakness">Weakness</a></li>
 	<li><a href="#When">When</a></li>
@@ -442,6 +446,10 @@
 <h2 id="Agenda_Deck">Agenda Deck</h2>
 
 <p>See "<a href="#Act_Deck_and_Agenda_Deck">Act Deck and Agenda Deck</a>" on page 3.</p>
+
+<h2 id="Alert" style="color:red">Alert (added in <em>The Forgotten Age</em>)</h2>
+
+<p>Each time an investigator fails a skill test while attempting to evade an enemy with the alert keyword, after applying all results for that skill test, that enemy performs an attack against the evading investigator. An enemy does not exhaust after performing an alert attack. This attack occurs whether the enemy is engaged with the evading investigator or not.</p>
 
 <h2 id="Aloof">Aloof</h2>
 
@@ -1815,6 +1823,14 @@
 
 <p>Some scenarios instruct the players to set aside specific cards. Set-aside cards have no interaction with the game until they are referenced by instructions within the scenario or by a card ability.</p>
 
+<h2 id="Seal" style="color:red">Seal (added in <em>The Forgotten Age</em>)</h2>
+
+<p>As an additional cost for a card with the seal keyword to enter play, its controller must search the chaos bag for the specified chaos token and place it on top of the card, thereby sealing it. If there is a choice of which token to seal, the card's controller chooses. If the specified token is not in the chaos bag, the card cannot enter play. A sealed chaos token is not considered to be in the chaos bag, and therefore cannot be revealed from the chaos bag as part of a skill test or ability.</p>
+
+<p>When a chaos token is "released," it is returned to the chaos bag and is no longer considered sealed. <strong>If a card with one or more chaos tokens sealed on it leaves play for any reason, any chaos tokens sealed on it are immediately released.</strong></p>
+
+<p>Some cards (with or without the seal keyword) may also have abilities that seal one or more chaos tokens as part of their effect. This is done following the same process as above: searching the chaos bag for the specified token, removing it from the chaos bag, and placing it on the card. If the specified token is not in the chaos bag, the effect fails.</p>
+
 <h2 id="Search">Search</h2>
 
 <p>When a player is instructed to search for a card, that player is permitted to look at all of the cards in the searched area without revealing those cards to the other players.</p>
@@ -1958,6 +1974,14 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 <li>  If a scenario weakness or asset is earned that is in an expansion you do not own, simply continue without that card.</li>
 
 </ul>
+
+<h2 id="Supplies" style="color:red">Supplies (added in <em>The Forgotten Age</em>)</h2>
+
+<p>At certain points throughout <em>The Forgotten Age</em> campaign, investigators are given the opportunity to choose supplies to bring on their expeditions into the wilds. These supplies are recorded in the Campaign Log, under each investigator's "Supplies" section.</p>
+
+<p>Supplies are purchased with supply points, which are granted to investigators whenever they are given the opportunity to purchase supplies. Leftover supply points are not recorded, and are lost.</p>
+
+<p>An investigator's supplies will determine the possible options available during gameplay and throughout the story of this campaign. <strong>Each supply has no effect on its own.</strong> Some card effects, story options, and resolutions may change or become available depending on the supplies carried by the investigator(s).</p>
 
 <h2 id="Surge">Surge</h2>
 
@@ -2118,6 +2142,26 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 <li>  A card cannot bear uses of a type other than that established by its own "Uses (X type)" keyword. <em>(For example, a card with "Uses (4 ammo)" cannot gain charges.)</em></li>
 
 <li>  Some cards with this keyword bear text that causes the card to be discarded if it has no uses remaining. If the card contains no such text, it remains in play even if out of uses.</li>
+
+</ul>
+
+<h2 id="Vengeance_Points" style="color:red">Vengeance Points (added in <em>The Forgotten Age</em>)</h2>
+
+<p>Some encounter cards are worth vengeance points. The text <strong>Vengeance X</strong> indicates that a card is worth X vengeance points.</p>
+
+<p>Like <strong>Victory X</strong>, when an encounter card with <strong>Vengeance X</strong> is overcome by the investigators, it is stored in the victory display until the end of the scenario. However, unlike victory points, vengeance represents the awareness and animosity of the Father of Serpents, and it is generally a good idea to avoid accruing vengeance points whenever possible.</p>
+
+<p>Vengeance points in the victory display have no impact upon the game unless specifically referenced by another encounter card.</p>
+
+<ul>
+
+<li>  As an enemy with <strong>Vengeance X</strong> is defeated, place the card in the victory display instead of in the discard pile.</li>
+
+<li>  At the end of a scenario, take each location with <strong>Vengeance X</strong> that is in play, revealed, and has no clues on it, and place it in the victory display.</li>
+
+<li>  As a treachery card with <strong>Vengeance X</strong> completes its resolution, place it in the victory display instead of in the discard pile.</li>
+
+<li>  Cards worth vengeance points are not also worth victory points unless the card has both <strong>Victory X</strong> and <strong>Vengeance X</strong>.</li>
 
 </ul>
 
