--- a/src/AppBundle/Resources/views/Builder/initbuild-investigator.html.twig
+++ b/src/AppBundle/Resources/views/Builder/initbuild-investigator.html.twig
@@ -1,12 +1,12 @@
 {% import "AppBundle::macros.html.twig" as macros %}
-<div style="width: 380px; padding : 2px; padding-top : 10px; border : solid #dfdfdf 1px; background-color: rgba(255, 255, 255, 0.4)">
+<div style="width: 360px; padding : 2px; padding-top : 10px; border : solid #dfdfdf 1px; background-color: rgba(255, 255, 255, 0.4)">
 	<div style="display: flex;">
 		<div>
 		<span class="deck-list-investigator-image card-thumbnail-2x card-thumbnail-investigator" title="{{ investigator.name }}" style="background-image:url({{ asset('/bundles/cards/'~investigator.code~'.png') }})"></span>
 		</div>
 		<div style="height : 119px; padding-left : 0.2em;">
 			<h4 style="padding : 2px; margin: 0;">{{ macros.card_name_no_link(investigator) }}</h4>
-			<ul style="padding-left : 17px; ">
+			<ul style="margin-left : 25px; padding-left: 0px;">
 				<li>Deck Size: {{investigator.deckRequirements.size}}</li>
 				{% for card in investigator.deckRequirements.cards %}
 				<li>{{ macros.card_name_no_link(card) }}</li>
