--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -173,10 +173,16 @@ div.tags span.tag:not(:first-child)::before {
 	border-bottom : solid 1px rgba(100, 100, 100, 0.1);
 }
 
+h4, h5 {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 h4.deck-section {
 	border-bottom: solid 1px rgba(130, 160, 200, 0.5);
 	font-size: 15px;
 }
+
 
 /********** DECK EDITOR ************/
 
