Add new 'vengeance' field to DB
I copied the uses of Victory to add this. Happy to add it to search as well, just didn't want to take another letter without consulting first.

Not sure if the DB migrations are stored in the repository somewhere.

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -54,6 +54,9 @@ body {
 .victory {
 	font-weight : bold;
 }
+.vengeance {
+	font-weight : bold;
+}
 
 .table-expanded>thead>tr>th, .table-expanded>tbody>tr>th, .table-expanded>tfoot>tr>th, .table-expanded>thead>tr>td, .table-expanded>tbody>tr>td, .table-expanded>tfoot>tr>td {
 	padding: 8px 8px;
