--- a/src/AppBundle/Resources/views/Search/card-text.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-text.html.twig
@@ -5,4 +5,7 @@
 {% if card.victory %}
 	<div class="victory">Victory {{card.victory}}.</div>
 {% endif %}
+{% if card.vengeance %}
+  <div class="vengeance">Vengeance {{card.vengeance}}.</div>
+{% endif %}
 </div>
