added manual xp adjustment for upgraded decks

--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -40,6 +40,7 @@
 	<input type="hidden" name="content">
 	<input type="hidden" name="problem">
 	<input type="hidden" name="description">
+	<input type="hidden" name="xp_adjustment">
 	<input type="hidden" name="xp_spent">
 	<input type="hidden" name="faction_code" value="{{ deck.character.code }}">
 	<input type="hidden" name="tags">
