--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -199,6 +199,10 @@ h4.deck-section {
 	height: 70px;
 }
 
+.xp_up, .xp_down {
+	cursor: pointer;
+}
+
 /********* LIST OF DECKS ************/
 
 .list-decks>tbody>tr>td {
