--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -2,7 +2,12 @@
 <div class="row" id="global_filters">
 	
 	<div class="col-md-12 text-right" style="margin-bottom:10px">
-    <div class="btn-group">
+		<div class="btn-group">    	
+    	<button type="button" class="btn btn-xs btn-default" id="chaos">
+				<span class="fa fa-random"></span> Chaos</span>
+			</button>
+		</div>
+    <div class="btn-group">    	
 			<button type="button" class="btn btn-xs btn-default dropdown-toggle " data-toggle="dropdown">
 				<span class="fa fa-sort"></span> <span class="hidden-xs">Sort Deck</span> <span class="caret"></span>
 			</button>
