--- a/src/AppBundle/Resources/views/Search/card-faction.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-faction.html.twig
@@ -1,4 +1,6 @@
 <div class="card-faction">
 	<span class="icon-{{ card.faction_code }} fg-{{ card.faction_code }}"></span>
 	<span class="card-faction">{{ card.faction_name }}</span>
+	{% if card.faction2_code is defined %}<span class="icon-{{ card.faction2_code }} fg-{{ card.faction2_code }}"></span>
+	<span class="card-faction">{{ card.faction2_name }}</span>{% endif %}
 </div>
