added all changes needed for ignore slot

--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -38,6 +38,7 @@
 	<input type="hidden" id="deck-save-as-copy" name="copy" value="0">
 	<input type="hidden" id="deck-cancel-edits" name="cancel_edits" value="0">
 	<input type="hidden" name="content">
+	<input type="hidden" name="ignored">
 	<input type="hidden" name="problem">
 	<input type="hidden" name="description">
 	<input type="hidden" name="xp_adjustment">
