--- a/src/AppBundle/Resources/views/Modale/card.html.twig
+++ b/src/AppBundle/Resources/views/Modale/card.html.twig
@@ -5,9 +5,12 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3 class="modal-title card-name">Modal title</h3>
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <div class="btn-group modal-qty" data-toggle="buttons"></div>
+                <div class="row modal-deck-options">
+                    <div class="col-sm-7 text-center modal-deck-qty">
+                        Deck Quantity: <div class="btn-group modal-qty" data-toggle="buttons"></div>
+                    </div>
+                    <div class="col-sm-5 text-center modal-deck-ignore">
+                        Ignore Limit: <div class="btn-group modal-ignore" data-toggle="buttons"></div>
                     </div>
                 </div>
             </div>
