--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -6,9 +6,7 @@
 <a class="card-tip" data-code="{{ card.code }}">{{ card.name }} <i>({{ card.pack.name }})</i></a>
 {% endmacro %}
 
-{% macro card_name_no_link(card) %}
-<a style="color : inherit;" class="card-tip card-preview" data-code="{{ card.code }}">{{ card.name }}</a>
-{% endmacro %}
+{% macro card_name_no_link(card) %}<a style="color : inherit;" class="card-tip card-preview" data-code="{{ card.code }}">{{ card.name }}</a>{% endmacro %}
 
 {% macro decklist_table_row(decklist) %}
 <tr>
@@ -22,14 +20,14 @@
 
 {% macro username(user) %}
 <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username fg-{{ user.color }}">{{ user.username }}</a>
-{% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
-<small title="User Reputation">{{ user.reputation }}</small>
+{% if user.donation > 0 %}<span class="fa fa-gift donator" title="Gracious Donator"></span>{% endif %}
+ &middot; <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
 
 {% macro username_colorless(user) %}
 <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username">{{ user.username }}</a>
-{% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
-<small title="User Reputation">{{ user.reputation }}</small>
+{% if user.donation > 0 %}<span class="fa fa-gift donator" title="Gracious Donator"></span>{% endif %}
+ &middot; <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
 
 {% macro decklist_social_icons(decklist) %}
